@@ -66,10 +66,15 @@ class EditPage {
 		}
 		if ( $this->save ) {
 			$this->editForm( 'save' );
-		} else if ( $this->preview or $wgUser->getOption('previewonfirst')) {
+		} else if ( $this->preview ) {
 			$this->editForm( 'preview' );
 		} else { # First time through
-			$this->editForm( 'initial' );
+			$this->initForm();
+			if( $wgUser->getOption('previewonfirst') ) {
+				$this->editForm( 'preview' );
+			} else {
+				$this->editForm( 'initial' );
+			}
 		}
 	}
 
@@ -265,10 +270,7 @@ class EditPage {
 		# checking, etc.
 
 		if ( 'initial' == $formtype ) {
-			$this->edittime = $this->mArticle->getTimestamp();
-			$this->textbox1 = $this->mArticle->getContent( true );
-			$this->summary = '';
-			$this->proxyCheck();
+			$this->initForm();
 		}
 		$wgOut->setRobotpolicy( 'noindex,nofollow' );
 
@@ -424,11 +426,6 @@ class EditPage {
 				$parserOutput = $wgParser->parse( $previewtext , $wgTitle, $parserOptions );
 				$wgOut->addHTML( $parserOutput->mText );
 			} else {
-				# if user want to see preview when he edit an article
-				if( $wgUser->getOption('previewonfirst') and ($this->textbox1 == '')) {
-					$this->textbox1 = $this->mArticle->getContent(true);
-				}
-
 				$parserOutput = $wgParser->parse( $this->mArticle->preSaveTransform( $this->textbox1 ) ."\n\n",
 						$wgTitle, $parserOptions );		
 				
@@ -518,6 +515,16 @@ htmlspecialchars( $wgContLang->recodeForEdit( $this->textbox1 ) ) .
 			$wgOut->addHTML($previewhead);
 			$wgOut->addHTML($previewHTML);
 		}
+	}
+	
+	/**
+	 * @todo document
+	 */
+	function initForm() {
+		$this->edittime = $this->mArticle->getTimestamp();
+		$this->textbox1 = $this->mArticle->getContent( true );
+		$this->summary = '';
+		$this->proxyCheck();
 	}
 
 	/**
